examples/test/testpolicy13740.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13740
  namespace: namespace96
spec:
  podSelector:
    matchLabels:
      key37: value27
      key1: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value36
          key49: value41
      podSelector:
        matchLabels:
          key17: value26
